name:                geppo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/geppo#readme
license:             BSD3
license-file:        LICENSE
author:              TANIGUCHI Kohei
maintainer:          a.d.xvii.kal.mai@gmail.com
copyright:           2017 TANIGUCHI Kohei
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Project, Request, Time, Setting
  build-depends:       aeson        == 1.0.*
                     , base         >= 4.7 && < 5
                     , bytestring   == 0.10.*
                     , data-default == 0.7.*
                     , lens         == 4.15.*
                     , lens-aeson   == 1.0.*
                     , pandoc       == 1.19.*
                     , pandoc-types
                     , req          == 0.2.*
                     , text         == 1.2.*
                     , time         == 1.6.*
  default-language:    Haskell2010

executable geppo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , geppo
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/geppo
